--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.1
+  intl: ^0.17.0
+  cached_network_image: ^3.2.2
+  flutter_svg: ^2.0.5
+  sqflite: ^2.2.6
+  equatable: ^2.0.5
+  shared_preferences: ^2.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
