--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,29 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.1.0
   http: ^0.13.5
+  flutter_cupertino_datetime_picker: ^3.0.0
+
+  # FireBase
+  firebase_auth: ^4.3.0
+#  google_sign_in: ^6.0.2
+  firebase_core: ^2.8.0
+  firebase_storage: ^11.1.0
+  cloud_firestore: ^4.4.5
+  image_picker: ^0.8.7+3
+  permission_handler: ^10.2.0
+
+  #For Fetching location
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+
+  # Send Email
+  flutter_email_sender: ^5.2.0
+
+  map_location_picker: ^1.0.1
+  device_info_plus: ^8.2.0
+  firebase_messaging: ^14.4.0
+  flutter_local_notifications: ^13.0.0
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
