--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   image_picker: ^0.8.7+3
   permission_handler: ^10.2.0
+  url_launcher: ^6.1.10
 
   #For Fetching location
   geolocator: ^9.0.2
