--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   image_picker: ^0.8.7+3
   permission_handler: ^10.2.0
   url_launcher: ^6.1.10
+  infinite_scroll_pagination: ^3.2.0
+
 
   #For Fetching location
   geolocator: ^9.0.2
@@ -62,7 +64,7 @@ dependencies:
   # Send Email
   flutter_email_sender: ^5.2.0
 
-  map_location_picker: ^1.0.1
+  map_location_picker: ^1.1.0
   device_info_plus: ^8.2.0
   firebase_messaging: ^14.4.0
   flutter_local_notifications: ^13.0.0
